Entrainement_HTML_CSS

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
 }
 
 h1{
+    margin-top: 100px;
+    margin-bottom: 100px;
     text-align: center;
 }
 
@@ -20,11 +22,18 @@ h1{
     align-items: center;
     position: sticky;
     top: 0px;
+    z-index: 1;
     
 }
 
 .col-photo{
+    margin-left: 60px;
     animation: fadeIn 3s;
+    transition: transform 0.2s;
+}
+
+.col-photo:hover{
+    transform: scale(1.2);
 }
 
 @keyframes fadeIn {
@@ -45,7 +54,7 @@ h1{
 }
 
 .name{
-    color: #00CFA3;
+    color: #00B385;
 }
 
 @keyframes slideRight {
@@ -53,14 +62,33 @@ h1{
     100% { transform: initial}
 }
 
+.my_journey{
+    margin-left: 300px;
+    margin-bottom: 100px;
+}
 
+.card{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    margin-top: 50px;
+    align-items: center;
+}
 
+.choice{
+    text-align: center;
+    font-size: 40px;
+}
 
-
-
-.col-photo{
-    margin-left: 60px;
+.desc_journey,.flag{
+    vertical-align: middle;
+    display: inline-block;
 }
 
 
 
+.separator{
+    display: block;
+    margin: 0 auto;
+    width: 8px;
+    opacity: .4;
+}
