--- a/style.css
+++ b/style.css
@@ -1,16 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap');
 
+
+* {
+    box-sizing: border-box;
+  }
+
 body {
     font-family: 'Noto Sans', sans-serif;
+    overflow-y: scroll;
+    color: white;
+    background-color:#474e5d;
 }
 
+body::-webkit-scrollbar{
+    display:none;
+}
 h1{
     margin-top: 100px;
     margin-bottom: 100px;
     text-align: center;
 }
+span,a{
+    color: #00B385;
+}
+
+.button_menu{
+    color: white;
+}
+
+.svg{
+    width: 20px;
+    vertical-align: middle;
+}
 
 .nav-bar {
+    color: white;
     background-color: #00B385;
     width: 100%;
     height: 70px;
@@ -27,7 +51,6 @@ h1{
 }
 
 .col-photo{
-    margin-left: 60px;
     animation: fadeIn 3s;
     transition: transform 0.2s;
 }
@@ -45,6 +68,8 @@ h1{
 .row_about_me{
     display: grid;
     grid-template-columns: 1fr 2fr;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 .presentation{
@@ -53,19 +78,12 @@ h1{
     animation: slideRight 1.5s;
 }
 
-.name{
-    color: #00B385;
-}
 
 @keyframes slideRight {
     0% { transform: translateX(200%)}
     100% { transform: initial}
 }
 
-.my_journey{
-    margin-left: 300px;
-    margin-bottom: 100px;
-}
 
 .card{
     display: grid;
@@ -74,21 +92,134 @@ h1{
     align-items: center;
 }
 
-.choice{
-    text-align: center;
-    font-size: 40px;
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  align-items: center;
 }
 
-.desc_journey,.flag{
-    vertical-align: middle;
-    display: inline-block;
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
 }
 
+/* Container around content */
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
 
+/* The circles on the timeline */
+.container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #00B385;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 0;
+}
 
-.separator{
-    display: block;
-    margin: 0 auto;
-    width: 8px;
-    opacity: .4;
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 0;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 0;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: #212121;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+/* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+    animation: slideRight;
+  }
+
+/* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+/* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+
+/* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
+  }
+}
+
+.fadeInLeft{
+
 }
