--- a/style.css
+++ b/style.css
@@ -1,95 +1,159 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,700;1,700&display=swap");
+
+/* CSS RESET */
+
+html, body, div, span, applet, object, iframe, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
 
+/* END CSS RESET */
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
 body {
-    font-family: 'Noto Sans', sans-serif;
-    overflow-y: scroll;
-    color: white;
-    background-color:#474e5d;
+  font-family: "Noto Sans", sans-serif;
+  overflow-y: scroll;
+  color: white;
+  background-color: #474e5d;
 }
 
-body::-webkit-scrollbar{
-    display:none;
+body::-webkit-scrollbar {
+  display: none;
 }
-h1{
-    margin-top: 100px;
-    margin-bottom: 100px;
-    text-align: center;
+h1 {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-align: center;
 }
-span,a{
-    color: #00B385;
-}
-
-.button_menu{
-    color: white;
+span,
+a {
+  color: #00b385;
 }
 
-.svg{
-    width: 20px;
-    vertical-align: middle;
+html {
+	scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
+
+
+.svg {
+  width: 20px;
+  vertical-align: middle;
 }
 
 .nav-bar {
-    color: white;
-    background-color: #00B385;
-    width: 100%;
-    height: 70px;
-    display: flex;
-    flex-flow : wrap;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-around;
-    align-items: center;
-    position: sticky;
-    top: 0px;
-    z-index: 1;
-    
+  color: white;
+  background-color: #00b385;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-flow: wrap;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-around;
+  align-items: center;
+  position: sticky;
+  top: 0px;
+  z-index: 1;
+  margin-top: 0px;
 }
 
-.col-photo{
-    animation: fadeIn 3s;
-    transition: transform 0.2s;
+.button_menu {
+  color: white;
 }
 
-.col-photo:hover{
-    transform: scale(1.2);
+
+.col-photo {
+  animation: fadeIn 3s;
+  transition: transform 0.2s;
+}
+
+.col-photo:hover {
+  transform: scale(1.2);
 }
 
 @keyframes fadeIn {
-    0% { opacity: 0;}
-    100% { opacity: 1;}
-    
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-.row_about_me{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin-left: 60px;
-    margin-right: 60px;
+.row_about_me {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
-.presentation{
-    font-size: 30px;
-    text-align: left;
-    animation: slideRight 1.5s;
+.presentation {
+  font-size: 30px;
+  text-align: left;
+  animation: slideRight 1.5s;
 }
-
 
 @keyframes slideRight {
-    0% { transform: translateX(200%)}
-    100% { transform: initial}
+  0% {
+    transform: translateX(200%);
+  }
+  100% {
+    transform: initial;
+  }
 }
 
-
-.card{
-    display: grid;
-    grid-template-columns: 30% 70%;
-    margin-top: 50px;
-    align-items: center;
+.card {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  margin-top: 50px;
+  align-items: center;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -103,7 +167,7 @@ span,a{
 
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 6px;
   background-color: white;
@@ -123,13 +187,13 @@ span,a{
 
 /* The circles on the timeline */
 .container::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
   right: -17px;
   background-color: white;
-  border: 4px solid #00B385;
+  border: 4px solid #00b385;
   top: 15px;
   border-radius: 50%;
   z-index: 0;
@@ -188,12 +252,12 @@ span,a{
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
-/* Place the timelime to the left */
+  /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
   }
 
-/* Full-width containers */
+  /* Full-width containers */
   .container {
     width: 100%;
     padding-left: 70px;
@@ -201,7 +265,7 @@ span,a{
     animation: slideRight;
   }
 
-/* Make sure that all arrows are pointing leftwards */
+  /* Make sure that all arrows are pointing leftwards */
   .container::before {
     left: 60px;
     border: medium solid white;
@@ -209,30 +273,48 @@ span,a{
     border-color: transparent white transparent transparent;
   }
 
-/* Make sure all circles are at the same spot */
-  .left::after, .right::after {
+  /* Make sure all circles are at the same spot */
+  .left::after,
+  .right::after {
     left: 15px;
   }
 
-/* Make all right containers behave like the left ones */
+  /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
   }
 }
 
-.projects{
+.projects {
   margin-bottom: 100px;
   margin-left: 60px;
   margin-right: 60px;
   display: flex;
   justify-content: space-around;
   column-gap: 5%;
-  
 }
 
-.each_project{
+.each_project {
   background-color: #212121;
   padding: 20px 30px;
   border-radius: 6px;
   flex: 1 1 0px;
+}
+
+.footer {
+  color: white;
+  background-color: #00b385;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-flow: wrap;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-around;
+  align-items: center;
+  position: sticky;
+}
+
+.design{
+  color: white;
 }
